<resources>
    <string name="app_name" translatable="false">The New York Times</string>
    <string name="about_activity_title">Zagulin Konstantin</string>
    <string name="feed_activity_title">Feed</string>
    <string name="story">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="send_message">Send message</string>
    <string name="first_role" >Developer</string>
    <string name="second_role">Engineer</string>
    <string name="third_role">Frisbee player</string>
    <string name="no_email_client_error">No email client found</string>
    <string name="default_mail_subject">Letter from test app</string>
    <string name="copyring">© Konstantin Zagulin, 2018</string>
    <string name="telegram_url" translatable="false">https://t.me/favres</string>
    <string name="linkedin_url" translatable="false">https://www.linkedin.com/in/konstantin-zagulin-8373676a/</string>
    <string name="github_url" translatable="false">https://github.com/konstzv</string>
    <string name="no_view_url_client_error">No browser found</string>
    <string name="edit_text_hint">Enter a message…</string>
    <string name="photo_content_description">Photo of Konstantin Zagulin</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="ad_title">Advertise</string>
    <string name="network_error">Network error</string>
    <string name="repeart">Repeat</string>
    <string name="update_error">Error on feed update %1$s</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="apply">Apply</string>
    <string name="welcome">Welcome</string>
</resources>
