<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    style="@style/width_match_height_wrap"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:elevation="10dp"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <EditText
        android:id="@+id/edit_text"
        style="@style/width_match_height_wrap"
        android:layout_margin="10dp"
        android:layout_marginTop="@dimen/edit_text_top_margin"
        android:hint="@string/edit_text_hint"
        android:imeOptions="actionSend"
        android:inputType="textMultiLine" />

    <LinearLayout
        style="@style/width_match_height_wrap"
        android:layout_margin="@dimen/short_indent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/send_msg_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/send_message"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>