<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    tools:showIn="@layout/about_activity">


    <LinearLayout
        style="@style/main_block_element"
        android:layout_marginTop="@dimen/role_block_top_margin"
        android:layout_marginBottom="@dimen/role_block_bottom_margin"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="@dimen/icon_side"
            android:layout_height="@dimen/icon_side"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_duke" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/first_role" />
    </LinearLayout>

    <LinearLayout
        style="@style/main_block_element"
        android:layout_marginTop="@dimen/role_block_top_margin"
        android:layout_marginBottom="@dimen/role_block_bottom_margin"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="@dimen/icon_side"
            android:layout_height="@dimen/icon_side"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_plane" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/second_role" />
    </LinearLayout>

    <LinearLayout
        style="@style/main_block_element"
        android:layout_marginTop="@dimen/role_block_top_margin"
        android:layout_marginBottom="@dimen/role_block_bottom_margin"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="@dimen/icon_side"
            android:layout_height="@dimen/icon_side"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_frisbee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/third_role" />
    </LinearLayout>

    <View
        style="@style/main_block_element"
        android:layout_height="@dimen/separator_thickness"
        android:layout_marginBottom="15dp"
        android:background="@color/colorAccent" />

    <TextView
        style="@style/main_block_element"
        android:text="@string/story" />

    <View
        style="@style/main_block_element"
        android:layout_height="@dimen/separator_thickness"
        android:layout_marginTop="@dimen/separator_margin"
        android:background="@color/colorAccent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_section_start_margin"
        android:layout_marginEnd="@dimen/main_section_end_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/telegram_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/social_img_padding"
            app:srcCompat="@drawable/ic_telegram" />

        <ImageView
            android:id="@+id/github_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/social_img_padding"
            app:srcCompat="@drawable/ic_github" />

        <ImageView
            android:id="@+id/linkedin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/social_img_padding"
            app:srcCompat="@drawable/ic_linkedin" />

    </LinearLayout>


</merge>